test/files/neg/bug409.check
bug409.scala:6: error: `{' expected
class Toto extends Expr with Case1(12);
                                  ^
one error found
